--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -95,7 +95,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
       tr(ng-repeat="card in cards")
 
         td(ng-click="card.selected = ! card.selected")
-          input(type="checkbox", ng-model="card.selected")
+          input(type="checkbox")
         td(ng-show="show_images")
             .col-md-6(ng-show="show_images")
               img.myImg(ng-show="card.img", src="{{ 'card.img' | ng}}", alt="cover image")
