(minor) search results: hide empty isbn field

--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -108,7 +108,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
               span
                 a(href="{{ 'card.details_url' | ng }}", target="_blank") {{ 'card.title' | ng }}
 
-              div(ng-show="show_images")
+              div(ng-show="show_images && card.isbn")
                     b isbn: 
                     span {{ 'card.isbn' |ng}}
 
