--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -25,8 +25,6 @@
 {% bootstrap_javascript %}
 {% load ngfilter %}
 
-h3 {% trans "Search in the stock" %}
-
 div(ng-cloak, ng-controller="collectionController")
 
  div
@@ -91,7 +89,7 @@ div(ng-cloak, ng-controller="collectionController")
           ng-options="elt.fields.name for elt in shelfs")
 
  .row
-   .col-md-8
+   .col-md-3
      input.btn.btn-primary(value="{% trans 'Search' %}", ng-click="validate()", type="submit")
 
      .btn-group
@@ -105,6 +103,8 @@ div(ng-cloak, ng-controller="collectionController")
 
       button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers" %}')
         i.glyphicon.glyphicon-th-list
+
+   .col-md-3 {% trans "Total number of cards" %}: {{'stats.nb_cards.value'|ng}}
 
 
  table.row-border.hover(ng-show="cards.length != 0", datatable="ng")
