--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -36,38 +36,57 @@ div(ng-controller="historyController")
           {{ 'alert.message' | ng }}
 
     uib-tabset(justified="true")
-        uib-tab(heading='{% trans "Entries" %}', select="filterHistory('Entry')")
         uib-tab(heading='{% trans "Sells" %}', select="filterHistory('Sell')")
+        uib-tab(heading='{% trans "Entries" %}', select="filterHistory('Entry')")
         uib-tab(heading='{% trans "Movements" %}', select="filterHistory('InternalMovement')")
 
-    button.button.btn.btn-default(type="button", ng-click="toggle_images()", title='{% trans "Hide and show covers" %}')
+    button.button.btn.btn-default(type="button", ng-click="toggle_details()", title='{% trans "Hide and show details (d)" %}')
       i.glyphicon.glyphicon-th-list
 
-    div(ng-repeat="hist in to_show")
-      .row.ng-cloak
+    .row.ng-cloak
+        table.table.table-condensed
+          thead
+            th.col-md-2(ng-click="sort_by('created')") {% trans "Date" %}
+              span.caret
+            th.col-md-1(ng-click="sort_by('total_price_sold')") {% trans "Amount" %}
+              span.caret
+            th {% trans "Titles" %}
+            th.col-md-1
 
-       div(ng-if="hist.item.model === 'Sell'")
-        .col-md-3
-          span {{ 'hist.item.created' | ng }}
-        .col-md-8
-          div {{ 'hist.item.cards.length' | ng }} {% trans "cards" %}:  
-            span {% trans "total" %}: {{ 'hist.item.total_price_sold' | ng }} €
-            a(href="{{ hist.item.details_url }}")  {% trans "details…" %}
-          div(ng-repeat="card in hist.item.cards")
-            .row
-              .col-md-3(ng-show="show_images")
-                img.myImg(ng-show="card.img", src="{{ 'card.img' | ng }}")
-              a(href="{{ card.get_absolute_url }}")  {{ 'card.title' | ng }}
-        .col-md-1
-          i.button.glyphicon.glyphicon-remove-sign.mouse-pointer(ng-click="sellUndo($index)", title="{% trans 'Undo this sell' %}")
+          tbody
+            tr(ng-repeat="sell in sells")
+             td {{ 'sell.item.created' | ng }}
+             td {{ 'sell.item.total_price_sold' | ng }} €
+             td
+                .row {{ 'sell.item.cards.length' | ng }} {% trans "cards" %}
+                table.table.table-condensed(ng-show="show_details > 0")
+                  thead
+                    th.col-md-2(ng-show="show_details > 1")
+                    th.col-md-6 {% trans "Title" %}
+                    th.col-md-1 {% trans "price init" %}
+                    th.col-md-2 {% trans "price sold" %}
+                    th.col-md-1 {% trans "quantity" %}
+
+                  tbody
+                    tr(ng-repeat="card_sold in sell.item.cards")
+                      td(ng-show="show_details == 2")
+                        img.myImg(ng-show="card_sold.card.img", src="{{ 'card_sold.card.img' | ng }}")
+                      td
+                        a(href="{{'card_sold.card.get_absolute_url'|ng}}")  {{ 'card_sold.card.title' | ng }}
+                      td {{'card_sold.price_init'|ng}} €
+                      td {{'card_sold.price_sold'|ng}} €
+                      td {{'card_sold.quantity'|ng}}
+
+             td
+                i.col-md-2.button.glyphicon.glyphicon-share-alt.mouse-pointer(ng-click="sellUndo($index)", title="{% trans 'Undo this sell' %}")
 
 
-       div(ng-if="hist.item.model === 'Entry'")
+    div(ng-if="hist.item.model === 'Entry'")
          .col-md-3
            span {{ 'hist.item.created ' | ng }}
          .col-md-9
             div(ng-repeat="item in hist.item.copies")
-               .col-md-3(ng-show="show_images")
+               .col-md-3(ng-show="show_details == 2")
                     img.myImg(ng-show="item.card.img", src="{{ 'item.card.img' | ng }}")
                .col-md-9
                  a(href="{{ 'item.card.get_absolute_url' | ng }}") {{ 'item.card.title' | ng }}
@@ -83,7 +102,5 @@ div(ng-controller="historyController")
           a(href="{{ hist.item.card.get_absolute_url }}")
            div  {{ hist.item.card.title }}
           {% endverbatim %}
-
-  a(href="") more...
 
 {% endblock content %}
