mv Sell's history in own template

--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -1,4 +1,3 @@
-
 // Copyright 2014 - 2016 The Abelujo Developers
 // See the COPYRIGHT file at the top-level directory of this distribution
 
@@ -43,65 +42,7 @@ div(ng-controller="historyController")
     button.button.btn.btn-default(type="button", ng-click="toggle_details()", title='{% trans "Hide and show details (d)" %}')
       i.glyphicon.glyphicon-th-list
 
-    .row.ng-cloak
-      .col-md-9
-        table.table.table-condensed
-          thead
-            th.col-md-2(ng-click="sort_by('created')") {% trans "Date" %}
-              span.caret
-            th.col-md-1(ng-click="sort_by('total_price_sold')") {% trans "Amount" %}
-              span.caret
-            th {% trans "Titles" %}
-            th.col-md-1
-
-          tbody
-            tr(ng-repeat="sell in sells")
-             td {{ 'sell.item.created' | ng }}
-             td {{ 'sell.item.total_price_sold' | ng }} €
-             td
-                .row.mouse-pointer(ng-click="sell.show_row = ! sell.show_row")
-                  span {{ 'sell.item.cards.length' | ng }} {% trans "titles" %}, {{'sell.item.total_copies_sold'|ng}}x
-                table.table.table-condensed(ng-show="show_details > 0 || sell.show_row == true")
-                  thead
-                    th.col-md-2(ng-show="show_details > 1 || sell.show_covers")
-                    th.col-md-6.mouse-pointer(ng-click="sell.show_covers = ! sell.show_covers") {% trans "Title" %}
-                      i.glyphicon.glyphicon-menu-down
-                    th.col-md-1 {% trans "price init" %}
-                    th.col-md-2 {% trans "price sold" %}
-                    th.col-md-1 {% trans "quantity" %}
-
-                  tbody
-                    tr(ng-repeat="card_sold in sell.item.cards")
-                      td(ng-show="show_details == 2 || sell.show_covers")
-                        img.myImg(ng-show="card_sold.card.img", src="{{ 'card_sold.card.img' | ng }}")
-                      td
-                        a(href="{{'card_sold.card.get_absolute_url'|ng}}")  {{ 'card_sold.card.title' | ng }}
-                      td {{'card_sold.price_init'|ng}} €
-                      td {{'card_sold.price_sold'|ng}} €
-                      td {{'card_sold.quantity'|ng}}
-
-             td
-                i.col-md-2.button.glyphicon.glyphicon-share-alt.mouse-pointer(ng-click="sellUndo($index)", title="{% trans 'Undo this sell' %}")
-
-      .col-md-3.panel.panel-info
-        div.panel-heading {% trans "Statistics" %}
-        div.panel-body
-          h4 {% trans "Revenue of current month" %}: {{'sells_month.revenue'|ng}} {% trans "€" %}
-          div {% trans "total cards sold" %}: {{'sells_month.nb_sold_cards'|ng}}
-          div {% trans "mean" %}: {{'sells_month.mean'|ng}} {% trans "€" %}
-          h4 {% trans "Best 10 sells of this month" %}
-          table.table
-            thead
-              tr
-                th {% trans "Title" %}
-                th {% trans "Quantity sold" %}
-            tbody
-              tr(ng-repeat="sell in sells_month.best_sells")
-                td {{ 'sell.title' | ng }}
-                td {{ 'sell.quantity' | ng }}
-            tfoot
-              tr
-                td.text-center(colspan="5")
+    {% include "search/history_sells.jade" %}
 
     div(ng-if="hist.item.model === 'Entry'")
          .col-md-3
