--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -55,7 +55,7 @@ div(ng-controller="inventoryNewController")
             typeahead-on-select="add_selected_card($item)"
             title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
             id="default-input"
-            placeholder='{% trans "Search in the stock" %}'
+            placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
           )
           i.glyphicon.glyphicon-refresh.ng-cloak(ng-show='loadingCards')
 
