--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -57,11 +57,10 @@ div(ng-controller="inventoryNewController")
             id="default-input"
             placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
           )
-          i.glyphicon.glyphicon-refresh.ng-cloak(ng-show='loadingCards')
 
           span.input-group-btn
             button.btn.btn-default(type='button')
-              i.glyphicon.glyphicon-refresh
+              i.glyphicon.glyphicon-search
 
      .col-lg-3
 
