(minor) Inventories list: display publiser name

--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -74,7 +74,12 @@ table.table.table-striped.table-hover
         if inv.place
           td {{ inv.place }}
         else
-          td {{ inv.basket }}
+          if inv.basket
+            td {{ inv.basket }}
+          else
+            if inv.publisher
+              td {{ inv.publisher.name }}
+
       td
         a(href="{{ inv.id }}")
           button.btn.btn-primary {% trans "Continue" %}
