UI - black top navbar

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -31,7 +31,7 @@ html(ng-app="abelujo")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
       div {% block pagetitle %} {% endblock %}
 
-  nav.navbar.navbar-default(role="navigation")
+  nav.navbar.navbar-default.navbar-inverse(role="navigation")
     body.container-fullwidth
       div.navbar-collapse
         ul.nav.navbar-nav
