UI - navbar fixed to top

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -31,8 +31,8 @@ html(ng-app="abelujo")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
       div {% block pagetitle %} {% endblock %}
 
-  nav.navbar.navbar-default.navbar-inverse(role="navigation")
-    body.container-fullwidth
+  body.container-fullwidth(style="padding-top: 60px;")
+   nav.navbar.navbar-default.navbar-inverse.navbar-fixed-top.container-fluid(role="navigation")
       div.navbar-collapse
         ul.nav.navbar-nav
           li
