--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -88,10 +88,10 @@ div(ng-controller="dashboardController", ng-cloak="stats")
                 td.text-center(colspan="5")
                   div(st-pagination="", st-items-by-page="10")
      .row.panel.panel-info
-      h3.panel.panel-heading {% trans "Age of the last sell" %}
+      h3.panel.panel-heading {% trans "Age of the stock per shelf" %}
 
       div.panel.panel-body
-        em {% trans "Choose a shelf to show the corresponding graph." %}
+        div: em {% trans "Choose a shelf to show the corresponding graph." %}
         label.col-sm-4 {% trans "Shelf" %}
         div.col-md-8
          form
